k8s/k8s_network_2/manifests/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backand
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backand
  template:
    metadata:
      labels:
        app: backand
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool
