k8s/k8s_network_2/manifests/svc_front_back.yml
---
apiVersion: v1
kind: Service
metadata:
  name: svc-front
spec:
  selector:
    app: frontend
  type: ClusterIP
  ports:
  - name: nginx
    port: 9001
    targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: svc-back
spec:
  selector:
    app: backand
  type: ClusterIP
  ports:
  - name: multitool
    port: 9002
    targetPort: 8080
