k8s/k8s_network_2/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: happy-dev.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-front
            port:
              name: nginx
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: svc-back
            port:
              name: multitool
